cmake_minimum_required(VERSION 3.13)
project(firstCpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(firstCpp main.cpp)

add_executable(class_mgr object-oriented/ClassMgr.cpp)
add_executable(string_mgr StringMgr.cpp)
add_executable(mem_mgr advanced/MemMgr.cpp)
add_executable(pointer_mgr PointerMgr.cpp)
add_executable(reference_mgr ReferenceMgr.cpp)
add_executable(struct_mgr StructMgr.cpp)
add_executable(inherit_mgr object-oriented/inheritMgr.cpp)
add_executable(overload_mgr object-oriented/OverloadMgr.cpp)
add_executable(leetcode80-89_mgr leetcode/leetcode80-89.cpp)
add_executable(polymorphism_mgr object-oriented/PolymorphismMgr.cpp)
add_executable(abstract_mgr object-oriented/AbstractMgr.cpp)
add_executable(file_mgr advanced/FileMgr.cpp)
add_executable(exception_mgr advanced/ExceptionMgr.cpp)
add_executable(namespace_mgr advanced/NamespaceMgr.cpp)
add_executable(template_mgr advanced/TemplateMgr.cpp)
add_executable(preprocessor_mgr advanced/PreprocessorMgr.cpp)
add_executable(signal_mgr advanced/SignalMgr.cpp)
add_executable(thread_mgr advanced/ThreadMgr.cpp)
add_executable(fduqueue_mgr learning/FduQueue.cpp learning/FduQueue.h)
add_executable(tthread_mgr thread/ThreadMgr.cpp)
add_executable(multithread_mgr thread/MultithreadMgr.cpp)
add_executable(prodcons_mgr thread/Producer-consumer.cpp)
add_executable(testqueue_mgr learning/TestqueueMgr.cpp)